--- a/企業検索システム/要求定義_システム要件.md
+++ b/企業検索システム/要求定義_システム要件.md
@@ -1,5 +1,28 @@
-# 背景
-自社では取引業者が多岐にわたり、県内外の企業を対策にしておりIT業者100社
-# 目的
-1台のコンピュータで管理している現システムをネットワークを利用したWebシステムに変更し、ブラウザを利用して各部署からでも情報を取り出せるように効率の向上をする。
-また、検索条件歳て企業の所在県、業種を設定検索できる事とする。
+## 背景
+自社では取引業者が多岐にわたり、県内外の企業を対象にしておりIT業界企業100社、卸売企業50社、製造業30社との取引先企業の情報をある部署のコンピュータ1台で管理している。
+各部署の社員は情報取得する場合、その部署に行く必要があるため、効率が悪く利用しにくい。
+　また、今後取引企業が増えることが予想され効率よく情報を取り出す必要がある。
+
+
+## 目的
+1台のコンピュータで管理している現システムをネットワークを利用したWebシステムに変更し、ブラウザを利用して各部署からでも情報を取り出せるように孤立の向上をする。
+　また、検索条件として企業の所在県、業種を設定検索できることとする。
+
+１－３.要件定義・優先度
+|No|大分類|小分類|要件|優先度|備考|
+|--|--|--|--|--|--|
+|1|基本要件|利用者環境|サービス利用にあたって、クライアント端末にアプリケーションをインストールすることなくブラウザから利用できる|高|.|
+|2|^|^|^|^|^|
+|3|^|ユーザー管理|ユーザーIDとパスワードを用いたログインができる|高|.|
+|4|^|デザイン|サイト全体として、統一されたページデザインにすること|中|.|
+|5|^|^|^|^|^|
+|6|検索要件|所在検索|指定した所在県よち抽出ができる|高|複合条件でも検索可能とする|
+|7|^|業種検索|指定した業種より抽出ができる|高|^|
+|8|^|条件なし|すべての企画を抽出ができる|高|^|
+|9|企業情報登録|企業情報登録|管理画面から企業情報を登録することができる|高|.|
+|10|企業情報保守|企業情報編集|管理画面から企業情報を編集することができる|高|.|
+|11|企業情報削除|管理画面から企業情報を削除することができる|高|.|
+|12||||||
+|13||||||
+|14||||||
+|15||||||
